Updated Readme file for Application Instructions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database=MYSQL
 spring.datasource.platform=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/learning
 spring.datasource.username=root
-spring.datasource.password=Sahil@94600
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
@@ -15,8 +15,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=connect.sahilsoni@gmail.com
-spring.mail.password=Sahil@123#
+spring.mail.username=test@gmail.com
+spring.mail.password=abcdxyz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.smtp.debug=trueMailConfiguration
